--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,7 @@
 /* Link to google fonts */
 @import url("https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400&display=swap");
 
+/* Set Globally */
 * {
   margin: 0 auto;
   padding: 0;
@@ -49,26 +50,31 @@ section {
   margin: 1% 0 1% 0;
 }
 
+/* Float article left for dashboard */
 .box-left {
   float: left;
 }
 
+/* Float article right for dashboard */
 .box-right {
   float: right;
 }
 
+/* Article box for dashboard */
 .box-half {
   display: inline;
   width: 49%;
   height: 250px;
   display: inline-block;
   margin: 10px 0 5px 0;
+  overflow: auto;
 }
 
 .box-half p {
   text-align: center;
 }
 
+/* Text sizing for dashboard */
 #dice-one,
 #dice-two {
   text-align: center;
@@ -80,6 +86,7 @@ section {
   font-size: 4rem;
 }
 
+/* Alien Images */
 #image-alien-512,
 #image-alien-hungry {
   height: 25%;
@@ -87,6 +94,7 @@ section {
   padding-top: 2.5%;
 }
 
+/* Styling Buttons */
 .my-button {
   position: relative;
   width: 50%;
@@ -106,6 +114,11 @@ section {
   display: none;
 }
 
+button {
+  display: inline-block;
+  color: brown;
+}
+
 ul {
   margin: 10px 0 10px 30px;
 }
@@ -114,13 +127,64 @@ li {
   list-style-image: url(../images/favicon_io/favicon-16x16.png);
 }
 
-button {
-  display: inline-block;
-  color: brown;
-}
-
 footer {
   display: inline;
   text-align: center;
   margin: 2.5% 2.5%;
+}
+
+/* Media Queries for smaller screens */
+@media screen and (max-width: 800px) {
+
+  body {
+    width: 90%;
+  }
+
+  .box-half {
+    display: inline;
+    width: 49%;
+    height: 250px;
+    display: inline-block;
+    margin: 5px 0 5px 0;
+  }
+
+/* Styling Buttons */
+.my-button {
+  position: relative;
+  width: 60%;
+  height: 50px;
+  background-color: black;
+  border-color: white;
+  border-radius: 5px;
+  border-width: 5px;
+  text-decoration: none;
+  color: white;
+  font-size: 1rem;
+  left: 20%;
+  margin: 10px 0 10px 0;
+}
+
+#dice-one,
+#dice-two {
+  text-align: center;
+  font-size: 5rem;
+}
+
+#total-score {
+  text-align: center;
+  font-size: 2.25rem;
+}
+
+article h2{
+  font-size: 1rem;
+}
+
+/* Alien Images */
+#image-alien-512,
+#image-alien-hungry {
+  height: 50%;
+  width: 50%;
+  padding-top: 2.5%;
+}
+
 }
