Improvement to bonus points, it now works on all double dices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -185,6 +185,7 @@ footer {
   }
 }
 
+/**************************************/
 /* Media Queries for smaller screens */
 @media screen and (max-width: 800px) {
   body {
