Validating html, css, made corrections. Ready for first ever git merge. Fingers crossed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -81,7 +81,7 @@ article {
 .border-white:hover {
   border-top: 1px solid white;
   border-bottom: 1px solid white;
-  border-width: 75%;
+  width: 99%
 }
 
 /* Float article left for dashboard */
