--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -98,7 +98,15 @@ article {
 .box-half {
   display: inline-block;
   width: 49%;
-  height: 275px;
+  height: 330px;
+  margin: 10px 0 5px 0;
+  overflow: auto;
+}
+
+.box-half-narrow {
+  display: inline-block;
+  width: 49%;
+  height: 225px;
   margin: 10px 0 5px 0;
   overflow: auto;
 }
@@ -130,11 +138,6 @@ input[type="text"] {
 }
 
 /* Text sizing for dashboard */
-#dice-one,
-#dice-two {
-  text-align: center;
-  font-size: 7.5rem;
-}
 
 #total-score {
   text-align: center;
@@ -258,10 +261,8 @@ footer {
 
 /******CSS Dice Start******/
 #dice-one {
-  position: absolute;
-  display: inline-block;
-  top: 100px;
-  left: 100px;
+  float: left;
+  margin-left: 10%;
   width: 300px;
   height: 300px;
   border: 3px solid white;
@@ -270,16 +271,13 @@ footer {
 
 
 #dice-two {
-  position: absolute;
-  display: inline-block;
-  top: 100px;
-  left: 500px;
+  float: right;
+  margin-right: 10%;
   width: 300px;
   height: 300px;
   border: 3px solid white;
   border-radius: 5px;
 }
-
 
 .digit-one, .digit-two {
   float: left;
