Corrections to html and css to pass w3c vlaidation

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -98,6 +98,7 @@ article {
 .box-half {
   display: inline-block;
   width: 49%;
+  background-color: #000;
   height: 330px;
   margin: 10px 0 5px 0;
   overflow: auto;
